# StellarCade

.github/workflows/: test-contracts.yml
backend/migrations/: create_outbox.js
backend/src/: server.js
backend/src/controllers/: games.controller.js
backend/src/models/: AuditLog.model.js  Outbox.model.js
backend/src/services/: audit.service.js  contractMonitoring.service.js  outbox.worker.js  stellar.service.js
backend/tests/integration/: outbox.worker.test.js
contracts/: Cargo.toml
contracts/attendance-pass/src/: lib.rs  storage.rs  types.rs
contracts/challenge-ladder/src/: lib.rs  types.rs
contracts/contract-role-registry/src/: lib.rs  test.rs
contracts/escrow-ledger/src/: storage.rs
contracts/fanout-distributor/src/: lib.rs  storage.rs  types.rs
contracts/fee-management/src/: lib.rs
contracts/lending-pool/: Cargo.toml
contracts/lending-pool/src/: lib.rs  storage.rs  test.rs  types.rs
contracts/merch-redemption/src/: lib.rs  test.rs  types.rs
contracts/quest-redeemer/src/: lib.rs  types.rs
contracts/squad-roster/src/: lib.rs  types.rs
contracts/vote-escrow/src/: storage.rs
docs/contracts/: arena-sessions.md  coin-flip.md  creator-escrow.md  creator-royalties.md  emergency-pause.md  jackpot-pool.md  matchmaking-queue.md  random-generator.md  reserve-auction.md  staking-rewards.md  ticket-market.md
frontend/src/: App.tsx  index.css
frontend/src/components/: CollapsibleSection.tsx  HoldingsBreakDowncard.tsx
frontend/src/components/v1/: AccountSwitcher.css  AccountSwitcher.tsx  AnalyticsRangeSwitcher.tsx  AsyncStateBoundary.tsx  Callout.tsx  QueueHealthWidget.tsx  (+6 more)
frontend/src/pages/: AnalyticsDashboard.tsx  AuditLog.tsx  GameLobby.tsx  GameLobbyDashboard.css  Portfolio.tsx  WalletDetail.tsx
frontend/src/services/: query-cache-invalidation.ts  transaction-orchestrator.ts  typed-api-sdk.ts
frontend/tests/: App.test.tsx
frontend/tests/components/: AnalyticsRangeSwitcher.test.tsx  AuditSnapshotCard.test.tsx  CollapsibleSection.test.tsx  GameLobby.test.tsx  HoldingsBreakdownCard.test.tsx  Portfolio.test.tsx  QueueHealthWidget.test.tsx  QuickPivotLinks.test.tsx
frontend/tests/unit/: AccountSwitcher.test.tsx
(+7 files in other folders)
