[workspace]
resolver = "2"

members = [
    "access-control",
    "bonus-rotator",
    "anti-cheat-bounties",
    "bounty-escrow",
    "creator-royalties",
    "achievement-badge",
    "ai-generated-game",
    "balance-management",
    "coin-flip",
    "color-prediction",
    "comprehensive-test-suite",
    "contract-address-registry",
    "contract-circuit-breaker",
    "contract-doc-generator",
    "contract-health-registry",
    "contract-interaction-library",
    "contract-metadata-registry",
    "contract-monitoring",
    "contract-role-registry",
    "contract-upgrade-timelock",
    "cross-chain-bridge",
    "cross-contract-call-guard",
    "cross-contract-handler",
    "daily-reward-emission",
    "daily-trivia",
    "deployment-scripts",
    "dice-roll",
    "dynamic-fee-policy",
    "duel-engine",
    "emergency-pause",
    "epoch-scheduler",
    "escrow-marketplace",
    "escrow-vault",
    "exploit-prevention",
    "identity-registry",
    "lending-pool",
    "fee-management",
    "gas-optimization-analysis",
    "governance",
    "governance-token",
    "guild-season",
    "leaderboard",
    "matchmaking-queue",
    "multiplayer-room",
    "nft-reward",
    "number-guess",
    "oracle-integration",
    "pattern-puzzle",
    "penalty-slashing",
    "price-prediction",
    "prize-pool",
    "random-generator",
    "raffle-engine",
    "referral-rewards",
    "referral-system",
    "revenue-split",
    "reward-distribution",
    "reward-stream",
    "reward-vesting",
    "session-nonce-manager",
    "settlement-queue",
    "shared",
    "speed-trivia",
    "jackpot-pool",
    "staking",
    "ticket-market",
    "staking-rewards",
    "streak-bonus",
    "loot-crate",
    "tournament-system",
    "treasury",
    "treasury-allocation",
    "trivia-game",
    "upgrade-mechanism",
    "vip-subscription",
    "wordle-clone",
]

exclude = [
    "higher-lower",
    "challenge-ladder",
    "merch-redemption",
]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
panic = "abort"
lto = true
codegen-units = 1
